# ViennaEntityComponentSystem

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Console/: CMakeLists.txt  Console.cpp  Console.h  ConsoleArchetype.cpp  ConsoleArchetype.h  ConsoleComponent.h  ConsoleEntity.h  ConsoleListener.cpp  ConsoleListener.h  ConsoleRegistry.cpp  ConsoleRegistry.h  ImguiInstance.cpp  Listener.cpp  Listener.h
benchmark/sequential/: RESULTS.md  RESULTS.md.json
build.alt/: CMakeCache.txt  CTestTestfile.cmake  ViennaEntityComponentSystem.sln  cmake_install.cmake
build.alt/.cmake/api/v1/reply/: cache-v2-297026e90d10ed80080d.json  cmakeFiles-v1-fe3d63adc463304600ce.json  codemodel-v2-1423a61182cd29d3c575.json  directory-_deps.viennastrongtype-build-MinSizeRel-c550d8df7765619c1993.json  directory-_deps.viennatypelistlibrary-build-Release-410699ca40d1bf814f08.json  index-2025-03-24T09-33-18-0673.json  target-ALL_BUILD-RelWithDebInfo-10ce962ba3ea6ec99597.json  target-ALL_BUILD-RelWithDebInfo-c8cedf26b2404ba009ef.json  target-ALL_BUILD-Release-4228c2078cd47297f4a4.json  target-Continuous-Release-367a6e22e932ac010852.json  target-Experimental-RelWithDebInfo-98c7e9451e99fd2fc1a4.json  target-Nightly-Debug-c4e339b96e2c17bc2dcc.json  target-NightlyMemoryCheck-MinSizeRel-fa4059fc382ba09d4057.json  target-ZERO_CHECK-RelWithDebInfo-6d7edbd31b5adadfbf0f.json  target-testvecs-Debug-64744a66ea416da2c35d.json  target-testvecs-MinSizeRel-16b3d51e0396ea4e7e43.json  target-testvecs-RelWithDebInfo-78cd16602a28ec1cbc2a.json  target-testvecs-Release-ef489cf0ee8911f0c8b4.json  toolchains-v1-08da458cd2ee4ee17baf.json
build.alt/Testing/: TAG
build.alt/Testing/20250307-0926/: Test.xml
build.alt/Testing/20250324-0835/: Test.xml
build.alt/tests/: CTestTestfile.cmake  cmake_install.cmake
docs/: CMakeLists.txt  Doxyfile.in
examples/basic_test/: CMakeLists.txt  basic_test.cpp  basic_test.h
examples/basic_test/basic_test.dir/Debug/: basic_test.exe.recipe
examples/basic_test/basic_test.dir/Debug/basic_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  basic_test.lastbuildstate  basic_test.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
examples/example/: CMakeLists.txt  example.cpp  example.h
examples/parallel/: CMakeLists.txt  log.json  parallel.cpp  parallel.h
examples/performance/: CMakeLists.txt  performance.cpp  performance.h
examples/test/: CMakeLists.txt  test.cpp  test.h
include/: IntType.h  VECS.h  VECS2.h  VECSArchetype.h  VECSArchetype2.h  VECSCompSystem.h  VECSCompUser.h  VECSComponent.h  VECSConsoleComm.h  VECSContainer.h  VECSContainer1.h  VECSHandle.h  VECSIterator.h  VECSManager.h  VECSMutex.h  VECSRegistry.h  VECSSlotMap.h  VECSTable.h  VECSThreadPool.h  VECSUtil.h  VECSVector.h  VEComponent.h  VEContainer.h  VEECS.h  VEECSUser.h  VEEngine.h  VESystemPhysics.cpp  VETypeList.h  VEUtil.h  VGJS.h  VGJSCoro.h  VLLT.h  VTLL.h  VeSystemPhysics.h  vve.h
include/old/: VECS.h  VECSArchetype.h  VECSHashMap.h  VECSIterator.h  VECSUtil.h  VLLT.h  VTLL.h
src/: CMakeLists.txt  VEContainer.cpp  VEEngine.cpp  VEImgui.cpp  cmake_install.cmake
src/vve.dir/Debug/: vve.lib.recipe  vve.vcxproj.FileListAbsolute.txt
src/vve.dir/Debug/vve.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  vve.lastbuildstate  vve.write.1u.tlog
src/vve.dir/Release/: vve.lib.recipe
src/vve.dir/Release/vve.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  vve.lastbuildstate  vve.write.1u.tlog
tests/: CMakeLists.txt  performance.R  performance.cpp  test_helper.cpp  test_structs.cpp  testlib.cpp  testparallel.cpp  testparallel_manager.cpp  testvecs.cpp  testvecs_old.cpp  testvecs_vecs.cpp  testvecscons.cpp
